...
        "description": "Incorrect time entered. Possible overlaps. error"
    },
    "timeslotAdded":"Time slots added!",
    "@timeslotAdded":{
        "description": "Time slots added!r"
    },
    "editTimeslotTitle":"Edit timeslots",
    "@editTimeslotTitle":{
        "description": "Edit timeslots"
    },   


    "messages":"Messages",
...
        "description": "Image loaded"
    },     
    "close":"Close",
    "@close":{
        "description": "Close"
    },
    "editPreferences":"Edit preferences",
    "@editPreferences":{
        "description": "Edit preferences"
    },
    "insertTimeslots":"Insert timeslots",
    "@insertTimeslots":{
        "description": "Insert timeslots"
    },
    "editTimeslots":"Edit timeslots",
    "@editTimeslots":{
        "description": "Edit timeslots"
    },
    "logout":"Logout",
    "@logout":{
        "description": "Logout"
    },
    "browseGallery":"Browse Gallery",
    "@browseGallery":{
        "description": "Browse Gallery"
...
        "description": "reviews"
    },
    "rating":"rating",
    "@rating":{
        "description": "rating"
    },
    "ownLesson":"Own lessons",
    "@ownLesson":{
        "description": "Own lessons"
    },
    "saved":"Saved",
    "@saved":{
        "description": "Saved"
...
